[gd_scene load_steps=4 format=3 uid="uid://bln16g3lssmg8"]

[ext_resource type="Texture2D" uid="uid://c087x5tvpyuox" path="res://assets/fireball.png" id="1_ktous"]
[ext_resource type="Script" uid="uid://bta4y2xkwssrd" path="res://scripts/flame.gd" id="1_x50ei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktous"]
size = Vector2(12, 13)

[node name="Flame" type="Area2D"]
script = ExtResource("1_x50ei")
SPEED = 100.0
RANGE = 1.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ktous")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ktous")

[node name="RangeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_range_timer_timeout"]
